# django-playground

./: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
server/apps/school/: apps.py  models.py  serializers.py  urls.py  views.py
server/apps/school/migrations/: 0001_initial.py
server/settings/: asgi.py  settings.py  urls.py  wsgi.py
server/tests/tests_school/: test_views.py
